--- a/package.json
+++ b/package.json
@@ -15,5 +15,15 @@
   "bugs": {
     "url": "https://github.com/walterswoodward/exercise_tracker_backend/issues"
   },
-  "homepage": "https://github.com/walterswoodward/exercise_tracker_backend#readme"
+  "homepage": "https://github.com/walterswoodward/exercise_tracker_backend#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^6.1.0",
+    "express": "^4.16.4",
+    "mongoose": "^5.3.13"
+  },
+  "engines": {
+    "npm": "6.4.1",
+    "node": "10.12.0"
+  }
 }
